[FEAT] 주차장 프론트 작업

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/car.ico" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b938cb948c838bab228115971de46a4"
+    ></script>
     <title>Parking</title>
   </head>
-  <body>
-  </body>
-<div id="root"></div>
+  <body></body>
+  <div id="root"></div>
 </html>
