[FEAT] 주차장 및 검색내역 관련 프론트엔드 작업 완료

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/car.ico" />
     <script
+      strategy="beforeInteractive"
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b938cb948c838bab228115971de46a4"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5b938cb948c838bab228115971de46a4&libraries=services,clusterer,drawing"
     ></script>
     <title>Parking</title>
   </head>
