[FIX] admin css 수정, car 리팩토링

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -8,7 +8,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_APP_KEY%&libraries=services,clusterer,drawing"
     ></script>
-    <title>Parking</title>
+    <title>TURU PARKING</title>
   </head>
   <body></body>
   <div id="root"></div>
